- HTML: Create ID icons. - Js: Create 1 Elem to get linked to HTML template - Js: Set a default colour before assembling the icon. - Js: forEach loop to assemble the icon and get a colour for it, in accordance to its type. - Js: Using Elem to insert template in HTML. - Css: Add BGC to the main and create cards structure.

--- a/index.html
+++ b/index.html
@@ -4,12 +4,26 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <!-- FontAwsome link -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css" integrity="sha512-iBBXm8fW90+nuLcSKlbmrPcLa0OT92xO1BIsZ+ywDWZCvqsWgccV3gFoRBv0z+8dLJgyAHIhR35VZc2oM/gI1w==" crossorigin="anonymous"/>
+    <!-- /FontAwsome link -->
+    <!-- Bootstrap link -->
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/css/bootstrap.min.css" integrity="sha384-B0vP5xmATw1+K9KRQjQERJvTumQW0nPEzvF6L/Z6nronJ3oUOFUFpCjEUQouq2+l" crossorigin="anonymous">
+    <!-- /Bootstrap link -->
+    <!-- CSS link -->
     <link rel="stylesheet" href="./assets/css/style.css">
+    <!-- /CSS link -->
     <title>Icons Types</title>
-
 </head>
+
 <body>
-    
+    <header id="site_header">
+        <h1 class="title">FontIcons</h1>
+    </header>
+
+    <main id="site_main">
+        <section id="icons" class="d-flex flex-wrap justify-content-around p-4"></section>
+    </main>
     <script src="./assets/js/main.js"></script>
 </body>
 </html>
