-HTML: Create a filters bar. Add into it Select menu.

--- a/index.html
+++ b/index.html
@@ -18,10 +18,19 @@
 
 <body>
     <header id="site_header">
-        <h1 class="title">FontIcons</h1>
+        <h1 class="title font-weight-bold ml-4 py-1">FontIcons</h1>
     </header>
 
     <main id="site_main">
+        <section class="d-flex justify-content-center align-items-center p-3" id="filter">
+            <div class="h5 text-white">FILTER BY TYPE</div>
+            <select class="ml-3" name="filters" id="filters">
+                <option value="All">All</option>
+                <option value="animal">animal</option>
+                <option value="vegetable">vegetable</option>
+                <option value="user">user</option>
+            </select>
+        </section>
         <section id="icons" class="d-flex flex-wrap justify-content-around p-4"></section>
     </main>
     <script src="./assets/js/main.js"></script>
